add some basic questions and answers for the user in the support section

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -122,5 +122,48 @@
         "verification_required_title": "যাচাইকরণ প্রয়োজন",
         "verification_required_description": "লাইভ যেতে আপনাকে একজন যাচাইকৃত শিল্পী হতে হবে।",
         "verify_now_link": "এখন যাচাই করুন"
+    },
+    "support_page": {
+        "title": "সমর্থন কেন্দ্র",
+        "description": "একটি প্রশ্ন আছে? আমাদের AI সহকারীকে জিজ্ঞাসা করুন বা নীচের প্রায়শই জিজ্ঞাসিত প্রশ্নগুলি দেখুন।",
+        "ask_ai_title": "একটি প্রশ্ন জিজ্ঞাসা করুন",
+        "ask_ai_desc": "নীচে আপনার প্রশ্ন লিখুন এবং আমাদের AI আপনাকে সাহায্য করার জন্য যথাসাধ্য চেষ্টা করবে।",
+        "ask_ai_placeholder": "যেমন, আমি কীভাবে আমার পণ্যের দাম পরিবর্তন করব?",
+        "ask_ai_button": "AI কে জিজ্ঞাসা করুন",
+        "asking_button": "জিজ্ঞাসা করা হচ্ছে...",
+        "ai_assistant_title": "AI সহকারী",
+        "ai_assistant_desc": "আপনার প্রশ্নের উত্তর এখানে।",
+        "thinking": "ভাবছে...",
+        "no_query_title": "কোন প্রশ্ন প্রদান করা হয়নি",
+        "no_query_desc": "জমা দেওয়ার আগে দয়া করে আপনার প্রশ্ন লিখুন।",
+        "answer_ready_title": "উত্তর প্রস্তুত!",
+        "answer_ready_desc": "AI আপনার প্রশ্নের উত্তর দিয়েছে।",
+        "request_failed_title": "অনুরোধ ব্যর্থ হয়েছে",
+        "faq": {
+            "title": "প্রায়শই জিজ্ঞাসিত প্রশ্ন",
+            "description": "সাধারণ প্রশ্নের দ্রুত উত্তর খুঁজুন।",
+            "items": [
+                {
+                    "question": "Artisan প্ল্যাটফর্মটি কি বিনামূল্যে ব্যবহার করা যায়?",
+                    "answer": "হ্যাঁ, প্ল্যাটফর্মটি কারিগরদের জন্য সম্পূর্ণ বিনামূল্যে। আমরা আপনার বিক্রয়ের উপর কোনো কমিশন বা ফি চার্জ করি না।"
+                },
+                {
+                    "question": "আমি আমার বিক্রয়ের জন্য কীভাবে অর্থ পাব?",
+                    "answer": "আপনি আপনার ড্যাশবোর্ডের 'পেমেন্ট সেটিংস' বিভাগে আপনার অর্থপ্রদানের পছন্দগুলি সেট আপ করতে পারেন। আমরা UPI এবং সরাসরি ব্যাংক স্থানান্তরের মাধ্যমে অর্থ প্রদান সমর্থন করি।"
+                },
+                {
+                    "question": "AI সরঞ্জামগুলি কীভাবে কাজ করে?",
+                    "answer": "আমাদের AI সরঞ্জামগুলি সহজ করার জন্য ডিজাইন করা হয়েছে। উদাহরণস্বরূপ, একটি বিবরণ তৈরি করতে, কেবল একটি পণ্যের ছবি আপলোড করুন এবং 'জেনারেট' ক্লিক করুন। AI ছবিটি বিশ্লেষণ করে এবং আপনার জন্য একটি বিবরণ এবং ট্যাগ তৈরি করে। আপনি তারপরে আপনার ইচ্ছামতো পাঠ্য সম্পাদনা করতে পারেন।"
+                },
+                {
+                    "question": "আমি কি অন্যান্য শিল্পীদের সাথে যোগাযোগ করতে পারি?",
+                    "answer": "হ্যাঁ! 'কমিউনিটি হাব' আপনার জন্য প্ল্যাটফর্মের অন্যান্য কারিগরদের সাথে সংযোগ স্থাপন, ধারণা শেয়ার এবং সহযোগিতা করার একটি জায়গা।"
+                },
+                {
+                    "question": "লাইভ যেতে আমার অ্যাকাউন্ট যাচাই করতে হবে কেন?",
+                    "answer": "শিল্পী এবং শিক্ষার্থী সহ সকল ব্যবহারকারীদের জন্য একটি নিরাপদ এবং বিশ্বস্ত পরিবেশ নিশ্চিত করতে আমাদের লাইভ স্ট্রিমিংয়ের জন্য যাচাইকরণের প্রয়োজন। এটি অপব্যবহার রোধ করতে এবং প্ল্যাটফর্মের অখণ্ডতা বজায় রাখতে সহায়তা করে।"
+                }
+            ]
+        }
     }
 }
