--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -81,7 +81,7 @@
     },
     "payment_settings_page": {
         "title": "भुगतान सेटिंग्स",
-        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त کرتے हैं, इसे कॉन्फ़िगर करें।",
+        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त करते हैं, इसे कॉन्फ़िगर करें।",
         "card_title": "भुगतान विधि",
         "card_description": "धनराशि प्राप्त करने के लिए अपनी पसंदीदा विधि चुनें। आपकी जानकारी एन्क्रिप्टेड और सुरक्षित रूप से संग्रहीत है।",
         "upi_label": "UPI आईडी (VPA)",
@@ -122,5 +122,48 @@
         "verification_required_title": "सत्यापन आवश्यक",
         "verification_required_description": "लाइव जाने के लिए आपको एक सत्यापित कलाकार होना चाहिए।",
         "verify_now_link": "अभी सत्यापित करें"
+    },
+    "support_page": {
+        "title": "सहायता केंद्र",
+        "description": "कोई प्रश्न है? हमारे AI सहायक से पूछें या नीचे दिए गए अक्सर पूछे जाने वाले प्रश्न देखें।",
+        "ask_ai_title": "एक प्रश्न पूछें",
+        "ask_ai_desc": "नीचे अपनी क्वेरी दर्ज करें और हमारा AI आपकी मदद करने की पूरी कोशिश करेगा।",
+        "ask_ai_placeholder": "जैसे, मैं अपने उत्पाद की कीमत कैसे बदलूं?",
+        "ask_ai_button": "AI से पूछें",
+        "asking_button": "पूछ रहा है...",
+        "ai_assistant_title": "AI सहायक",
+        "ai_assistant_desc": "आपकी क्वेरी का जवाब यहां है।",
+        "thinking": "सोच रहा है...",
+        "no_query_title": "कोई क्वेरी प्रदान नहीं की गई",
+        "no_query_desc": "कृपया सबमिट करने से पहले अपना प्रश्न दर्ज करें।",
+        "answer_ready_title": "उत्तर तैयार है!",
+        "answer_ready_desc": "AI ने आपकी क्वेरी का जवाब दिया है।",
+        "request_failed_title": "अनुरोध विफल",
+        "faq": {
+            "title": "अक्सर पूछे जाने वाले प्रश्न",
+            "description": "सामान्य प्रश्नों के त्वरित उत्तर खोजें।",
+            "items": [
+                {
+                    "question": "क्या आर्टिसन प्लेटफॉर्म का उपयोग मुफ्त है?",
+                    "answer": "हाँ, कारीगरों के लिए मंच पूरी तरह से मुफ्त है। हम आपकी बिक्री पर कोई कमीशन या शुल्क नहीं लेते हैं।"
+                },
+                {
+                    "question": "मुझे अपनी बिक्री के लिए भुगतान कैसे मिलेगा?",
+                    "answer": "आप अपने डैशबोर्ड के 'भुगतान सेटिंग्स' अनुभाग में अपनी भुगतान प्राथमिकताएँ सेट कर सकते हैं। हम UPI और प्रत्यक्ष बैंक हस्तांतरण के माध्यम से भुगतान का समर्थन करते हैं।"
+                },
+                {
+                    "question": "AI उपकरण कैसे काम करते हैं?",
+                    "answer": "हमारे AI उपकरण सरल होने के लिए डिज़ाइन किए गए हैं। उदाहरण के लिए, एक विवरण उत्पन्न करने के लिए, बस एक उत्पाद छवि अपलोड करें और 'उत्पन्न करें' पर क्लिक करें। AI छवि का विश्लेषण करता है और आपके लिए एक विवरण और टैग बनाता है। फिर आप अपनी इच्छानुसार पाठ को संपादित कर सकते हैं।"
+                },
+                {
+                    "question": "क्या मैं अन्य कलाकारों के साथ बातचीत कर सकता हूं?",
+                    "answer": "हाँ! 'कम्युनिटी हब' आपके लिए मंच पर अन्य कारीगरों से जुड़ने, विचार साझा करने और सहयोग करने का एक स्थान है।"
+                },
+                {
+                    "question": "लाइव जाने के लिए मुझे अपना खाता सत्यापित करने की आवश्यकता क्यों है?",
+                    "answer": "कलाकारों और शिक्षार्थियों सहित सभी उपयोगकर्ताओं के लिए एक सुरक्षित और विश्वसनीय वातावरण सुनिश्चित करने के लिए हमें लाइव स्ट्रीमिंग के लिए सत्यापन की आवश्यकता है। यह दुरुपयोग को रोकने और मंच की अखंडता को बनाए रखने में मदद करता है।"
+                }
+            ]
+        }
     }
 }
