--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -122,5 +122,48 @@
         "verification_required_title": "पडताळणी आवश्यक",
         "verification_required_description": "थेट जाण्यासाठी तुम्ही एक सत्यापित कलाकार असणे आवश्यक आहे.",
         "verify_now_link": "आता सत्यापित करा"
+    },
+    "support_page": {
+        "title": "समर्थन केंद्र",
+        "description": "एक प्रश्न आहे? आमच्या AI सहाय्यकाला विचारा किंवा खालील नेहमी विचारले जाणारे प्रश्न तपासा.",
+        "ask_ai_title": "एक प्रश्न विचारा",
+        "ask_ai_desc": "खाली तुमची क्वेरी प्रविष्ट करा आणि आमचे AI तुम्हाला मदत करण्याचा सर्वोत्तम प्रयत्न करेल.",
+        "ask_ai_placeholder": "उदा., मी माझ्या उत्पादनाची किंमत कशी बदलू?",
+        "ask_ai_button": "AI ला विचारा",
+        "asking_button": "विचारत आहे...",
+        "ai_assistant_title": "AI सहाय्यक",
+        "ai_assistant_desc": "तुमच्या क्वेरीचे उत्तर येथे आहे.",
+        "thinking": "विचार करत आहे...",
+        "no_query_title": "कोणतीही क्वेरी प्रदान केलेली नाही",
+        "no_query_desc": "सबमिट करण्यापूर्वी कृपया तुमचा प्रश्न प्रविष्ट करा.",
+        "answer_ready_title": "उत्तर तयार आहे!",
+        "answer_ready_desc": "AI ने तुमच्या क्वेरीला प्रतिसाद दिला आहे.",
+        "request_failed_title": "अनुरोध अयशस्वी",
+        "faq": {
+            "title": "नेहमी विचारले जाणारे प्रश्न",
+            "description": "सामान्य प्रश्नांची त्वरित उत्तरे शोधा.",
+            "items": [
+                {
+                    "question": "आर्टिसन प्लॅटफॉर्म वापरण्यासाठी विनामूल्य आहे का?",
+                    "answer": "होय, प्लॅटफॉर्म कलाकारांसाठी पूर्णपणे विनामूल्य आहे. आम्ही तुमच्या विक्रीवर कोणतेही कमिशन किंवा शुल्क आकारत नाही."
+                },
+                {
+                    "question": "माझ्या विक्रीसाठी मला पैसे कसे मिळतील?",
+                    "answer": "तुम्ही तुमच्या डॅशबोर्डच्या 'पेमेंट सेटिंग्ज' विभागात तुमची पेमेंट प्राधान्ये सेट करू शकता. आम्ही UPI आणि थेट बँक हस्तांतरणाद्वारे पेआउटला समर्थन देतो."
+                },
+                {
+                    "question": "AI साधने कशी कार्य करतात?",
+                    "answer": "आमची AI साधने सोपी असण्यासाठी डिझाइन केलेली आहेत. उदाहरणार्थ, वर्णन तयार करण्यासाठी, फक्त एक उत्पादन प्रतिमा अपलोड करा आणि 'जनरेट' क्लिक करा. AI प्रतिमेचे विश्लेषण करते आणि तुमच्यासाठी एक वर्णन आणि टॅग तयार करते. त्यानंतर तुम्ही तुमच्या इच्छेनुसार मजकूर संपादित करू शकता."
+                },
+                {
+                    "question": "मी इतर कलाकारांशी संवाद साधू शकतो का?",
+                    "answer": "होय! 'कम्युनिटी हब' हे तुमच्यासाठी प्लॅटफॉर्मवरील इतर कलाकारांशी कनेक्ट होण्यासाठी, कल्पना सामायिक करण्यासाठी आणि सहयोग करण्यासाठी एक ठिकाण आहे."
+                },
+                {
+                    "question": "लाइव्ह जाण्यासाठी मला माझे खाते का सत्यापित करावे लागेल?",
+                    "answer": "कलाकार आणि शिकाऊंसह सर्व वापरकर्त्यांसाठी सुरक्षित आणि विश्वसनीय वातावरण सुनिश्चित करण्यासाठी आम्हाला थेट प्रवाहासाठी सत्यापनाची आवश्यकता आहे. हे गैरवापर टाळण्यास आणि प्लॅटफॉर्मची अखंडता राखण्यास मदत करते."
+                }
+            ]
+        }
     }
 }
