--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -122,5 +122,48 @@
         "verification_required_title": "சரிபார்ப்பு தேவை",
         "verification_required_description": "நேரலையில் செல்ல நீங்கள் ஒரு சரிபார்க்கப்பட்ட கலைஞராக இருக்க வேண்டும்.",
         "verify_now_link": "இப்போது சரிபார்க்கவும்"
+    },
+    "support_page": {
+        "title": "ஆதரவு மையம்",
+        "description": "கேள்வி உள்ளதா? எங்கள் AI உதவியாளரிடம் கேளுங்கள் அல்லது கீழே உள்ள அடிக்கடி கேட்கப்படும் கேள்விகளைச் சரிபார்க்கவும்.",
+        "ask_ai_title": "ஒரு கேள்வியைக் கேளுங்கள்",
+        "ask_ai_desc": "கீழே உங்கள் வினவலை உள்ளிடவும், எங்கள் AI உங்களுக்கு உதவ தங்களால் முடிந்த அனைத்தையும் செய்யும்.",
+        "ask_ai_placeholder": "எ.கா., எனது தயாரிப்பின் விலையை நான் எவ்வாறு மாற்றுவது?",
+        "ask_ai_button": "AI இடம் கேளுங்கள்",
+        "asking_button": "கேள்வி கேட்கிறது...",
+        "ai_assistant_title": "AI உதவியாளர்",
+        "ai_assistant_desc": "உங்கள் வினவலுக்கான பதில் இங்கே.",
+        "thinking": "சிந்திக்கிறது...",
+        "no_query_title": "வினவல் எதுவும் வழங்கப்படவில்லை",
+        "no_query_desc": "சமர்ப்பிக்கும் முன் உங்கள் கேள்வியை உள்ளிடவும்.",
+        "answer_ready_title": "பதில் தயார்!",
+        "answer_ready_desc": "AI உங்கள் வினவலுக்கு பதிலளித்துள்ளது.",
+        "request_failed_title": "கோரிக்கை தோல்வியடைந்தது",
+        "faq": {
+            "title": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
+            "description": "பொதுவான கேள்விகளுக்கான விரைவான பதில்களைக் கண்டறியவும்.",
+            "items": [
+                {
+                    "question": "Artisan தளம் பயன்படுத்த இலவசமா?",
+                    "answer": "ஆம், கைவினைஞர்களுக்கு இந்த தளம் முற்றிலும் இலவசம். உங்கள் விற்பனையில் நாங்கள் எந்த கமிஷனையும் அல்லது கட்டணத்தையும் வசூலிக்க மாட்டோம்."
+                },
+                {
+                    "question": "எனது விற்பனைக்கு நான் எப்படி பணம் பெறுவது?",
+                    "answer": "உங்கள் டாஷ்போர்டின் 'கட்டண அமைப்புகள்' பிரிவில் உங்கள் கட்டண விருப்பங்களை அமைக்கலாம். நாங்கள் UPI மற்றும் நேரடி வங்கி பரிமாற்றம் மூலம் பணம் செலுத்துவதை ஆதரிக்கிறோம்."
+                },
+                {
+                    "question": "AI கருவிகள் எவ்வாறு செயல்படுகின்றன?",
+                    "answer": "எங்கள் AI கருவிகள் எளிமையானதாக வடிவமைக்கப்பட்டுள்ளன. எடுத்துக்காட்டாக, ஒரு விளக்கத்தை உருவாக்க, ஒரு தயாரிப்பு படத்தைப் பதிவேற்றி 'உருவாக்கு' என்பதைக் கிளிக் செய்யவும். AI படத்தை பகுப்பாய்வு செய்து உங்களுக்காக ஒரு விளக்கத்தையும் குறிச்சொற்களையும் உருவாக்குகிறது. பின்னர் நீங்கள் விரும்பியபடி உரையைத் திருத்தலாம்."
+                },
+                {
+                    "question": "நான் மற்ற கலைஞர்களுடன் தொடர்பு கொள்ள முடியுமா?",
+                    "answer": "ஆம்! 'சமூக மையம்' என்பது தளத்தில் உள்ள மற்ற கைவினைஞர்களுடன் இணையவும், யோசனைகளைப் பகிர்ந்து கொள்ளவும், ஒத்துழைக்கவும் ஒரு இடம்."
+                },
+                {
+                    "question": "நேரலையில் செல்ல எனது கணக்கை ஏன் சரிபார்க்க வேண்டும்?",
+                    "answer": "கலைஞர்கள் மற்றும் கற்பவர்கள் உட்பட அனைத்து பயனர்களுக்கும் பாதுகாப்பான மற்றும் நம்பகமான சூழலை உறுதிப்படுத்த நேரடி ஒளிபரப்பிற்கு சரிபார்ப்பு தேவைப்படுகிறது. இது தவறான பயன்பாட்டைத் தடுக்கவும், தளத்தின் நேர்மையைப் பராமரிக்கவும் உதவுகிறது."
+                }
+            ]
+        }
     }
 }
