--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -122,5 +122,48 @@
         "verification_required_title": "ధృవీకరణ అవసరం",
         "verification_required_description": "ప్రత్యక్ష ప్రసారం చేయడానికి మీరు ధృవీకరించబడిన కళాకారుడిగా ఉండాలి.",
         "verify_now_link": "ఇప్పుడే ధృవీకరించండి"
+    },
+    "support_page": {
+        "title": "మద్దతు కేంద్రం",
+        "description": "ప్రశ్న ఉందా? మా AI సహాయకుడిని అడగండి లేదా దిగువ తరచుగా అడిగే ప్రశ్నలను తనిఖీ చేయండి.",
+        "ask_ai_title": "ఒక ప్రశ్న అడగండి",
+        "ask_ai_desc": "దిగువ మీ ప్రశ్నను నమోదు చేయండి మరియు మా AI మీకు సహాయం చేయడానికి ఉత్తమంగా ప్రయత్నిస్తుంది.",
+        "ask_ai_placeholder": "ఉదా., నా ఉత్పత్తి ధరను నేను ఎలా మార్చాలి?",
+        "ask_ai_button": "AI ని అడగండి",
+        "asking_button": "అడుగుతోంది...",
+        "ai_assistant_title": "AI సహాయకుడు",
+        "ai_assistant_desc": "మీ ప్రశ్నకు సమాధానం ఇక్కడ ఉంది.",
+        "thinking": "ఆలోచిస్తోంది...",
+        "no_query_title": "ప్రశ్న ఏదీ అందించబడలేదు",
+        "no_query_desc": "దయచేసి సమర్పించే ముందు మీ ప్రశ్నను నమోదు చేయండి.",
+        "answer_ready_title": "సమాధానం సిద్ధంగా ఉంది!",
+        "answer_ready_desc": "AI మీ ప్రశ్నకు ప్రతిస్పందించింది.",
+        "request_failed_title": "అభ్యర్థన విఫలమైంది",
+        "faq": {
+            "title": "తరచుగా అడిగే ప్రశ్నలు",
+            "description": "సాధారణ ప్రశ్నలకు శీఘ్ర సమాధానాలను కనుగొనండి.",
+            "items": [
+                {
+                    "question": "ఆర్టిసాన్ ప్లాట్‌ఫారమ్ ఉపయోగించడానికి ఉచితమా?",
+                    "answer": "అవును, కళాకారులకు ప్లాట్‌ఫారమ్ పూర్తిగా ఉచితం. మీ అమ్మకాలపై మేము ఎటువంటి కమిషన్ లేదా ఫీజులను వసూలు చేయము."
+                },
+                {
+                    "question": "నా అమ్మకాలకు నేను ఎలా చెల్లింపు పొందుతాను?",
+                    "answer": "మీరు మీ డాష్‌బోర్డ్‌లోని 'చెల్లింపు సెట్టింగ్‌లు' విభాగంలో మీ చెల్లింపు ప్రాధాన్యతలను సెటప్ చేయవచ్చు. మేము UPI మరియు ప్రత్యక్ష బ్యాంక్ బదిలీ ద్వారా చెల్లింపులకు మద్దతు ఇస్తాము."
+                },
+                {
+                    "question": "AI సాధనాలు ఎలా పని చేస్తాయి?",
+                    "answer": "మా AI సాధనాలు సరళంగా ఉండేలా రూపొందించబడ్డాయి. ఉదాహరణకు, ఒక వివరణను రూపొందించడానికి, ఒక ఉత్పత్తి చిత్రాన్ని అప్‌లోడ్ చేసి, 'జనరేట్' క్లిక్ చేయండి. AI చిత్రాన్ని విశ్లేషించి, మీ కోసం ఒక వివరణ మరియు ట్యాగ్‌లను సృష్టిస్తుంది. ఆ తర్వాత మీరు వచనాన్ని మీ ఇష్టానుసారం సవరించవచ్చు."
+                },
+                {
+                    "question": "నేను ఇతర కళాకారులతో సంకర్షణ చెందవచ్చా?",
+                    "answer": "అవును! 'కమ్యూనిటీ హబ్' మీరు ప్లాట్‌ఫారమ్‌లోని ఇతర కళాకారులతో కనెక్ట్ అవ్వడానికి, ఆలోచనలను పంచుకోవడానికి మరియు సహకరించడానికి ఒక ప్రదేశం."
+                },
+                {
+                    "question": "ప్రత్యక్ష ప్రసారం చేయడానికి నా ఖాతాను నేను ఎందుకు ధృవీకరించాలి?",
+                    "answer": "కళాకారులు మరియు అభ్యాసకులతో సహా వినియోగదారులందరికీ సురక్షితమైన మరియు విశ్వసనీయమైన వాతావరణాన్ని నిర్ధారించడానికి మాకు ప్రత్యక్ష ప్రసారం కోసం ధృవీకరణ అవసరం. ఇది దుర్వినియోగాన్ని నివారించడానికి మరియు ప్లాట్‌ఫారమ్ యొక్క సమగ్రతను కాపాడటానికి సహాయపడుతుంది."
+                }
+            ]
+        }
     }
 }
