--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -63,6 +63,7 @@
         "menu_community": "कम्युनिटी हब",
         "menu_support": "समर्थन",
         "menu_live_studio": "लाइव्ह स्टुडिओ",
+        "menu_requests": "फॉलो विनंत्या",
         "account_menu_label": "माझे खाते",
         "account_menu_verify": "खाते सत्यापित करा",
         "account_menu_profile": "प्रोफाइल",
@@ -98,7 +99,16 @@
     "community_page": {
         "title": "कम्युनिटी हब",
         "description": "सहकारी कलाकारांशी संपर्क साधा, कल्पना सामायिक करा आणि सहयोग करा.",
-        "send_message": "संदेश पाठवा"
+        "follow_button": "फॉलो करा"
+    },
+    "requests_page": {
+        "title": "फॉलो विनंत्या",
+        "description": "इतर कलाकारांकडून तुमच्या येणाऱ्या फॉलो विनंत्या व्यवस्थापित करा.",
+        "card_title": "येणाऱ्या विनंत्या",
+        "card_description": "कनेक्ट करण्यासाठी विनंत्या मंजूर करा किंवा नाकारा.",
+        "no_requests": "तुमच्याकडे कोणतीही प्रलंबित फॉलो विनंती नाही.",
+        "accept_button": "स्वीकार करा",
+        "decline_button": "नाकारा"
     },
     "live_studio_page": {
         "video_preview_title": "लाइव्ह स्टुडिओ",
@@ -161,7 +171,7 @@
                 },
                 {
                     "question": "लाइव्ह जाण्यासाठी मला माझे खाते का सत्यापित करावे लागेल?",
-                    "answer": "कलाकार आणि शिकाऊंसह सर्व वापरकर्त्यांसाठी सुरक्षित आणि विश्वसनीय वातावरण सुनिश्चित करण्यासाठी आम्हाला थेट प्रवाहासाठी सत्यापनाची आवश्यकता आहे. हे गैरवापर टाळण्यास आणि प्लॅटफॉर्मची अखंडता राखण्यास मदत करते."
+                    "answer": "कलाकार आणि शिकाऊंसह सर्व वापरकर्त्यांसाठी सुरक्षित आणि विश्वसनीय वातावरण सुनिश्चित करण्यासाठी आम्हाला थेट प्रवाहासाठी सत्यापनाची आवश्यकता आहे. हे गैरवापर टाळण्यास आणि प्लॅטफॉर्मची अखंडता राखण्यास मदत करते."
                 }
             ]
         }
