--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -63,6 +63,7 @@
         "menu_community": "சமூக மையம்",
         "menu_support": "ஆதரவு",
         "menu_live_studio": "நேரடி ஸ்டுடியோ",
+        "menu_requests": "பின்தொடர்தல் கோரிக்கைகள்",
         "account_menu_label": "என் கணக்கு",
         "account_menu_verify": "கணக்கைச் சரிபார்க்கவும்",
         "account_menu_profile": "சுயவிவரம்",
@@ -98,7 +99,16 @@
     "community_page": {
         "title": "சமூக மையம்",
         "description": "சக கைவினைஞர்களுடன் இணையுங்கள், யோசனைகளைப் பகிர்ந்து கொள்ளுங்கள், ஒத்துழைக்கவும்.",
-        "send_message": "செய்தி அனுப்பு"
+        "follow_button": "பின்தொடரவும்"
+    },
+    "requests_page": {
+        "title": "பின்தொடர்தல் கோரிக்கைகள்",
+        "description": "மற்ற கலைஞர்களிடமிருந்து உங்கள் உள்வரும் பின்தொடர்தல் கோரிக்கைகளை நிர்வகிக்கவும்.",
+        "card_title": "உள்வரும் கோரிக்கைகள்",
+        "card_description": "இணைக்க கோரிக்கைகளை ஏற்கவும் அல்லது நிராகரிக்கவும்.",
+        "no_requests": "உங்களிடம் நிலுவையில் உள்ள பின்தொடர்தல் கோரிக்கைகள் எதுவும் இல்லை.",
+        "accept_button": "ஏற்கவும்",
+        "decline_button": "நிராகரிக்கவும்"
     },
     "live_studio_page": {
         "video_preview_title": "நேரடி ஸ்டுடியோ",
