in the interface instead of start creating ,replace it with start your j

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "Empower Your Craft with AI",
         "subtitle": "Artisan provides intelligent tools to help you describe, narrate, and sell your unique creations. Focus on your art, we'll handle the words. The platform is completely free for artisans.",
-        "artisans_button": "Start Creating",
+        "artisans_button": "Start your journey",
         "login": "Login",
         "signup": "Sign Up",
         "features_title": "Features for the Modern Artisan",
