add  credit card option for the  buyer

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -88,12 +88,19 @@
         "upi_label": "UPI আইডি (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "ব্যাংক অ্যাকাউন্ট",
+        "credit_card_label": "ক্রেডিট কার্ড",
         "account_holder_name_label": "অ্যাকাউন্ট ধারকের নাম",
         "account_holder_name_placeholder": "যেমন, প্রিয়া কুমার",
         "account_number_label": "অ্যাকাউন্ট নম্বর",
         "account_number_placeholder": "আপনার অ্যাকাউন্ট নম্বর লিখুন",
         "ifsc_code_label": "IFSC কোড",
         "ifsc_code_placeholder": "আপনার ব্যাংকের IFSC কোড লিখুন",
+        "card_number_label": "কার্ড নম্বর",
+        "card_number_placeholder": "আপনার কার্ড নম্বর লিখুন",
+        "card_expiry_label": "মেয়াদ শেষ হওয়ার তারিখ",
+        "card_expiry_placeholder": "MM/YY",
+        "card_cvv_label": "CVV",
+        "card_cvv_placeholder": "CVV",
         "save_button": "পেমেন্ট সেটিংস সংরক্ষণ করুন"
     },
     "community_page": {
