--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -88,12 +88,19 @@
         "upi_label": "UPI ID (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "Bank Account",
+        "credit_card_label": "Credit Card",
         "account_holder_name_label": "Account Holder Name",
         "account_holder_name_placeholder": "e.g., Priya Kumar",
         "account_number_label": "Account Number",
         "account_number_placeholder": "Enter your account number",
         "ifsc_code_label": "IFSC Code",
         "ifsc_code_placeholder": "Enter your bank's IFSC code",
+        "card_number_label": "Card Number",
+        "card_number_placeholder": "Enter your card number",
+        "card_expiry_label": "Expiry Date",
+        "card_expiry_placeholder": "MM/YY",
+        "card_cvv_label": "CVV",
+        "card_cvv_placeholder": "CVV",
         "save_button": "Save Payment Settings"
     },
     "community_page": {
