--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -88,12 +88,19 @@
         "upi_label": "UPI आईडी (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "बैंक खाता",
+        "credit_card_label": "क्रेडिट कार्ड",
         "account_holder_name_label": "खाता धारक का नाम",
         "account_holder_name_placeholder": "उदा., प्रिया कुमार",
         "account_number_label": "खाता संख्या",
         "account_number_placeholder": "अपना खाता संख्या दर्ज करें",
         "ifsc_code_label": "IFSC कोड",
         "ifsc_code_placeholder": "अपने बैंक का IFSC कोड दर्ज करें",
+        "card_number_label": "कार्ड नंबर",
+        "card_number_placeholder": "अपना कार्ड नंबर दर्ज करें",
+        "card_expiry_label": "समाप्ति तिथि",
+        "card_expiry_placeholder": "MM/YY",
+        "card_cvv_label": "CVV",
+        "card_cvv_placeholder": "CVV",
         "save_button": "भुगतान सेटिंग्स सहेजें"
     },
     "community_page": {
