--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -88,12 +88,19 @@
         "upi_label": "UPI ஐடி (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "வங்கி கணக்கு",
+        "credit_card_label": "கடன் அட்டை",
         "account_holder_name_label": "கணக்கு வைத்திருப்பவரின் பெயர்",
         "account_holder_name_placeholder": "எ.கா., பிரியா குமார்",
         "account_number_label": "கணக்கு எண்",
         "account_number_placeholder": "உங்கள் கணக்கு எண்ணை உள்ளிடவும்",
         "ifsc_code_label": "IFSC குறியீடு",
         "ifsc_code_placeholder": "உங்கள் வங்கியின் IFSC குறியீட்டை உள்ளிடவும்",
+        "card_number_label": "அட்டை எண்",
+        "card_number_placeholder": "உங்கள் அட்டை எண்ணை உள்ளிடவும்",
+        "card_expiry_label": "காலாவதி தேதி",
+        "card_expiry_placeholder": "MM/YY",
+        "card_cvv_label": "CVV",
+        "card_cvv_placeholder": "CVV",
         "save_button": "கட்டண அமைப்புகளைச் சேமிக்கவும்"
     },
     "community_page": {
