--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -88,12 +88,19 @@
         "upi_label": "UPI ID (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "బ్యాంకు ఖాతా",
+        "credit_card_label": "క్రెడిట్ కార్డ్",
         "account_holder_name_label": "ఖాతాదారుని పేరు",
         "account_holder_name_placeholder": "ఉదా., ప్రియా కుమార్",
         "account_number_label": "ఖాతా సంఖ్య",
         "account_number_placeholder": "మీ ఖాతా సంఖ్యను నమోదు చేయండి",
         "ifsc_code_label": "IFSC కోడ్",
         "ifsc_code_placeholder": "మీ బ్యాంక్ యొక్క IFSC కోడ్‌ను నమోదు చేయండి",
+        "card_number_label": "కార్డ్ సంఖ్య",
+        "card_number_placeholder": "మీ కార్డ్ సంఖ్యను నమోదు చేయండి",
+        "card_expiry_label": "గడువు తేదీ",
+        "card_expiry_placeholder": "MM/YY",
+        "card_cvv_label": "CVV",
+        "card_cvv_placeholder": "CVV",
         "save_button": "చెల్లింపు సెట్టింగ్‌లను సేవ్ చేయండి"
     },
     "community_page": {
