--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -101,7 +101,9 @@
         "card_expiry_placeholder": "MM/YY",
         "card_cvv_label": "CVV",
         "card_cvv_placeholder": "CVV",
-        "save_button": "கட்டண அமைப்புகளைச் சேமிக்கவும்"
+        "save_button": "கட்டண அமைப்புகளைச் சேமிக்கவும்",
+        "payout_notice_title": "பணம் செலுத்தும் அட்டவணை",
+        "payout_notice_description": "தயவுசெய்து கவனிக்கவும்: உங்கள் விற்பனையிலிருந்து கிடைக்கும் நிதி 8 நாட்கள் வைத்திருக்கும் காலத்திற்குப் பிறகு உங்கள் தேர்ந்தெடுக்கப்பட்ட கணக்கிற்கு மாற்றப்படும். இது பரிவர்த்தனை பாதுகாப்பை உறுதி செய்வதற்காக."
     },
     "community_page": {
         "title": "சமூக மையம்",
