--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -101,7 +101,9 @@
         "card_expiry_placeholder": "MM/YY",
         "card_cvv_label": "CVV",
         "card_cvv_placeholder": "CVV",
-        "save_button": "भुगतान सेटिंग्स सहेजें"
+        "save_button": "भुगतान सेटिंग्स सहेजें",
+        "payout_notice_title": "भुगतान अनुसूची",
+        "payout_notice_description": "कृपया ध्यान दें: आपकी बिक्री से प्राप्त धनराशि 8 दिनों की होल्डिंग अवधि के बाद आपके चयनित खाते में स्थानांतरित कर दी जाएगी। यह लेनदेन सुरक्षा सुनिश्चित करने के लिए है।"
     },
     "community_page": {
         "title": "कम्युनिटी हब",
